[project]
name = "punchcard"
version = "0.1.0"
description = ""
authors = [
    {name = "Jefferson", email = "jfo.txt@gmail.com"},
]
dependencies = [
    "typer",
    "rich",
    "attrs>=24.2.0",
    "peewee>=3.17.6",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pylint",
]


[tool.pdm]
distribution = true


[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
pretty = true
exclude =  ["tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-x -vv"
testpaths = [
    "tests",
]
