[project]
name = "punchcard"
description = ""
authors = [
    {name = "Jefferson Silverio", email = "jt.silverio@proton.me"}
]
dependencies = [
    "peewee>=3.17.6",
    "typer>=0.12.5",
    "rich>=13.8.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "pylint>=3.2.7",
    "mypy>=1.11.2",
]

[project.scripts]
punch = "punchcard.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
pretty = true
exclude =  ["tests","cli.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-x -vv"
testpaths = [
    "tests",
]
